Added navbar and contact page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
   </head>
 
   <body>
+    <header>
+      <div class="navbar">
+        <h2>Awesome Books</h2>
+        <ul class="nav-links">
+          <li><a href="#" class="list">List</a></li>
+          <div class="separator"></div>
+          <li><a href="#" class="add">Add new</a></li>
+          <div class="separator"></div>
+          <li><a href="#" class="contact">Contact<a></a></li>
+        </ul>
+      </div>
+      <p class="datetime"><span id="datetime"></span></p>
+    </header>
+
     <main>
       <h1>All awesome books</h1>
       <div class="book-container">
@@ -43,6 +57,19 @@
             Add
           </button>
         </form>
+      </div>
+
+      <div class="contact-page">
+        <h3>Contact information</h3>
+        <p class="contact-details">
+          Do you have any questions or you just want to say "Hello"?<br />
+          You can reach out to us!
+        </p>
+        <ul class="contact-info">
+          <li>Our email:</li>
+          <li>Our phone number:</li>
+          <li>Our address:</li>
+        </ul>
       </div>
     </main>
     <script src="book.js"></script>
