--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             You can reach out to us!
           </p>
           <ul class="contact-info">
-            <li>Our email:</li>
-            <li>Our phone number:</li>
-            <li>Our address:</li>
+            <li>Our email: 9rhktrading@gmail.com</li>
+            <li>Our phone number: +62 853 056 700 89</li>
+            <li>Our address: Nairobi, Kenya</li>
           </ul>
         </div>
       </section>
